--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "typescript": "^4.8.3",
     "vue": "^2.6.14",
+    "vue-router": "4",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
